Updates Realm to version 2.0.0 with Kotlin 2.0 compatibility

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -133,6 +133,7 @@ jobs:
             -PsonatypeStagingProfileId=${{ secrets.OSSRH_STAGING_PROFILE_ID }}
 
   notify:
+    name: Send Slack notification
     needs: publish-bom
     uses: ./.github/workflows/notify.yml
     secrets:
