Firebase - Handle Google Sign In on both iOS and Android with GoogleAuthProvider

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,9 @@ realm = "2.0.0"
 serializationJson = "1.6.3"
 firebaseGitLiveApp = "1.13.0" # Firebase for KMP https://firebaseopensource.com/projects/gitliveapp/firebase-kotlin-sdk/
 bomGeneratorPlugin = "1.0.0.Final"
+playServices = "21.2.0"
+googleIdIdentity = "1.1.1"
+androidCredentials = "1.3.0-rc01"
 
 # Tweener
 tweenerCharts = "1.1.0"
@@ -33,6 +36,12 @@ tweener-charts = { group = "io.github.tweener", name = "kmp-charts", version.ref
 kotlin-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlin-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 
+# Google Sign In
+googleSignIn-playServicesAuth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServices" }
+googleSignIn-identity = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleIdIdentity" }
+googleSignIn-credentials = { module = "androidx.credentials:credentials", version.ref = "androidCredentials" }
+googleSignIn-credentials-playServicesAuth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "androidCredentials" }
+
 # Firebase GitLive
 firebase-firestore = { group = "dev.gitlive", name = "firebase-firestore", version.ref = "firebaseGitLiveApp" }
 firebase-config = { group = "dev.gitlive", name = "firebase-config", version.ref = "firebaseGitLiveApp" }
@@ -45,11 +54,15 @@ android-desugarjdklibs = { group = "com.android.tools", name = "desugar_jdk_libs
 android-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidCore" }
 android-annotations = { group = "androidx.annotation", name = "annotation", version.ref = "androidAnnotations" }
 
+[bundles]
+googleSignIn = ["googleSignIn-credentials", "googleSignIn-credentials-playServicesAuth", "googleSignIn-identity", "googleSignIn-playServicesAuth"]
+
 [plugins]
 android-library = { id = "com.android.library", version.ref = "gradle" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+kotlin-nativeCocoaPods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 dependency-versions = { id = "com.github.ben-manes.versions", version.ref = "dependencyVersionsPlugin" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 nexus-sonatype = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "nexusSonatype" }
