--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-kotlin = "2.0.0"
+kotlin = "2.0.10"
 gradle = "8.2.2"
 dependencyVersionsPlugin = "0.51.0"
 nexusSonatype = "2.0.0"
 dokka = "1.9.20"
-androidAnnotations = "1.8.0"
-coroutines = "1.8.1"
+androidAnnotations = "1.8.2"
+coroutines = "1.9.0-RC"
 napier = "2.7.1"
 kotlinxDatetime = "0.6.0"
 realm = "2.0.0"
-serializationJson = "1.6.3"
+serializationJson = "1.7.0"
 firebaseGitLiveApp = "2.0.0" # Firebase for KMP https://firebaseopensource.com/projects/gitliveapp/firebase-kotlin-sdk/
 bomGeneratorPlugin = "1.0.0.Final"
 playServices = "21.2.0"
@@ -20,7 +20,7 @@ androidCredentials = "1.3.0-rc01"
 tweenerCharts = "1.1.0"
 
 # Android
-androidDesugarJdkLibs = "2.0.4"
+androidDesugarJdkLibs = "2.1.1"
 androidCore = "1.13.1"
 
 [libraries]
