--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ bomGeneratorPlugin = "1.0.0.Final"
 playServices = "21.2.0"
 googleIdIdentity = "1.1.1"
 androidCredentials = "1.3.0-rc01"
+tooling = "1.6.5"
 
 # Tweener
 tweenerCharts = "1.1.0"
@@ -53,6 +54,9 @@ firebase-crashlytics = { group = "dev.gitlive", name = "firebase-crashlytics", v
 android-desugarjdklibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
 android-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidCore" }
 android-annotations = { group = "androidx.annotation", name = "annotation", version.ref = "androidAnnotations" }
+
+# Tooling
+tooling-async = { group = "dev.datlag.tooling", name = "tooling-async", version.ref = "tooling" }
 
 [bundles]
 googleSignIn = ["googleSignIn-credentials", "googleSignIn-credentials-playServicesAuth", "googleSignIn-identity", "googleSignIn-playServicesAuth"]
