--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ playServices = "21.2.0"
 googleIdIdentity = "1.1.1"
 androidCredentials = "1.3.0-rc01"
 tooling = "1.6.5"
+sekret = "2.0.0-alpha-07"
 
 # Tweener
 tweenerCharts = "1.1.0"
@@ -57,6 +58,7 @@ android-annotations = { group = "androidx.annotation", name = "annotation", vers
 
 # Tooling
 tooling-async = { group = "dev.datlag.tooling", name = "tooling-async", version.ref = "tooling" }
+sekret = { group = "dev.datlag.sekret", name = "annotations", version.ref = "sekret" }
 
 [bundles]
 googleSignIn = ["googleSignIn-credentials", "googleSignIn-credentials-playServicesAuth", "googleSignIn-identity", "googleSignIn-playServicesAuth"]
