--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-kotlin = "2.0.20"
+kotlin = "2.0.21"
 gradle = "8.5.2"
 dependencyVersionsPlugin = "0.51.0"
 nexusSonatype = "2.0.0"
 dokka = "1.9.20"
 androidAnnotations = "1.8.2"
-coroutines = "1.9.0-RC"
+coroutines = "1.9.0-RC.2"
 napier = "2.7.1"
 kotlinxDatetime = "0.6.1"
 realm = "2.3.0"
@@ -14,7 +14,7 @@ firebaseGitLiveApp = "2.1.0" # Firebase for KMP https://firebaseopensource.com/p
 bomGeneratorPlugin = "1.0.0.Final"
 playServices = "21.2.0"
 googleIdIdentity = "1.1.1"
-androidCredentials = "1.3.0-rc01"
+androidCredentials = "1.3.0"
 
 # Tweener
 tweenerCharts = "1.2.1"
