--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,5 @@ kotlin.code.style=official
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+#Compose
+org.jetbrains.compose.experimental.jscanvas.enabled=true
