--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,5 @@ kotlin.code.style=official
 android.useAndroidX=true
 android.nonTransitiveRClass=true
 #Compose
+org.jetbrains.compose.experimental.wasm.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
