Update Coroutines to 1.9.0 and serializationJson to 1.7.3

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,11 +4,11 @@ gradle = "8.5.2"
 dependencyVersionsPlugin = "0.51.0"
 nexusSonatype = "2.0.0"
 dokka = "1.9.20"
-coroutines = "1.9.0-RC.2"
+coroutines = "1.9.0"
 napier = "2.7.1"
 kotlinxDatetime = "0.6.1"
 realm = "2.3.0"
-serializationJson = "1.7.2"
+serializationJson = "1.7.3"
 firebaseGitLiveApp = "2.1.0" # Firebase for KMP https://firebaseopensource.com/projects/gitliveapp/firebase-kotlin-sdk/
 bomGeneratorPlugin = "1.0.0.Final"
 playServices = "21.2.0"
