--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,6 @@ dokka = "1.9.20"
 coroutines = "1.9.0"
 napier = "2.7.1"
 kotlinxDatetime = "0.6.1"
-realm = "2.3.0"
 serializationJson = "1.7.3"
 firebaseGitLiveApp = "2.1.0" # Firebase for KMP https://firebaseopensource.com/projects/gitliveapp/firebase-kotlin-sdk/
 bomGeneratorPlugin = "1.0.0.Final"
@@ -23,7 +22,6 @@ androidCore = "1.13.1"
 [libraries]
 napier = { group = "io.github.aakira", name = "napier", version.ref = "napier" }
 kotlin-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinxDatetime" }
-realm = { group = "io.realm.kotlin", name = "library-base", version.ref = "realm" }
 kotlin-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serializationJson" }
 kmpkit = { group = "io.github.tweener", name = "kmpkit", version.ref = "kmpKit" }
 
@@ -43,6 +41,7 @@ firebase-config = { group = "dev.gitlive", name = "firebase-config", version.ref
 firebase-auth = { group = "dev.gitlive", name = "firebase-auth", version.ref = "firebaseGitLiveApp" }
 firebase-functions = { group = "dev.gitlive", name = "firebase-functions", version.ref = "firebaseGitLiveApp" }
 firebase-crashlytics = { group = "dev.gitlive", name = "firebase-crashlytics", version.ref = "firebaseGitLiveApp" }
+firebase-analytics = { group = "dev.gitlive", name = "firebase-analytics", version.ref = "firebaseGitLiveApp" }
 
 # Android
 android-desugarjdklibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
@@ -59,5 +58,4 @@ kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref =
 dependency-versions = { id = "com.github.ben-manes.versions", version.ref = "dependencyVersionsPlugin" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 nexus-sonatype = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "nexusSonatype" }
-realm = { id = "io.realm.kotlin", version.ref = "realm" }
 bom-generator = { id = "io.github.gradlebom.generator-plugin", version.ref = "bomGeneratorPlugin" }
